Set m_{width,height}AvailableToChildrenChanged when scrollbars appear

This is a regression from https://codereview.chromium.org/1734203002. Before
that change, we'd just call layoutBlock(true). However, the new approach
just marks for layout and eventually recurses down, so to ensure that
the children get laid out, we have to set
m_{width,height}AvailableToChildrenChanged.

BUG=594465,593593,590683,593624,593593

Review URL: https://codereview.chromium.org/1811753003

Cr-Commit-Position: refs/heads/master@{#382074}

Former-commit-id: fbb25cec59deb052604d63036f1c5baf6efd2a5c